--- a/.env
+++ b/.env
@@ -2,9 +2,9 @@ VITE_API_KEY= Add your tmdb api key
 
 # firebase
 
-VITE_FIREBASE_API_KEY= *****************
-VITE_FIREBASE_AUTH_DOMAIN= ************
-VITE_FIREBASE_PROJECTID= ***************
-VITE_FIREBASE_STORAGE_BUCKET= **************
-VITE_FIREBASE_MESAGING_SENDER_ID= ************************
-APP_ID= ********************************
+VITE_FIREBASE_API_KEY= AIzaSyBV2928A16bo4eQAGLsFpcTeAfmzJZ8JvU
+VITE_FIREBASE_AUTH_DOMAIN= bluebirs-d1715.firebaseapp.com
+VITE_FIREBASE_PROJECTID= bluebirs-d1715
+VITE_FIREBASE_STORAGE_BUCKET= bluebirs-d1715.appspot.com
+VITE_FIREBASE_MESAGING_SENDER_ID= 927424860298
+APP_ID= 1:927424860298:web:bd5f10e33b3d8e02a9dd73
